--- a/style.css
+++ b/style.css
@@ -1,12 +1,29 @@
+:root {
+  --color-bg: hsl(180, 13%, 74%);
+  --color-bg-accent: hsla(236, 34%, 33%, 80);
+  --color-light: hsla(0, 0%, 83%, 0.5);
+  --color-light-accent: hsl(0deg 0% 50%);
+}
+
 body {
+  /* Typography */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: rgb(48, 48, 48);
+  color: var(--color-bg-accent);
+  background: var(--color-bg);
+  /* Layout */
+  display: grid;
+  justify-content: center;
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 3em;
 }
 
 .app-container {
-  border: 2px solid grey;
+  border: 2px solid var(--color-bg-accent);
   border-radius: 4px;
-  background: lightgrey;
+  background: var(--color-light);
   padding: 1em;
 }
